# OutbackWebEngine

./: .gitignore  Dockerfile  LICENSE  README.md  gen_compile_commands.sh
backend/: CMakeLists.txt  main.cpp
backend/include/: clock.hpp  player.hpp  server.hpp
backend/src/: clock.cpp  main.cpp  player.cpp  server.cpp
frontend/: CMakeLists.txt  index.html  main.cpp
frontend/include/: game_client.hpp
frontend/src/: game_client.cpp  main.cpp
frontend/web/: index.html
